--- a/pokedex/src/fanta.css
+++ b/pokedex/src/fanta.css
@@ -20,25 +20,25 @@
     --background-primary: white;
     --background-secondary: '';
     --background-tertiary: #dbeafe;
-    --background-accent: '';
-    --background-compliment: '';
-    --background-gradient: '';
+    --background-accent: transparent;
+    --background-compliment: transparent;
+    --background-gradient: none;
     --background-muted: #f8fafc;
 
     --color-primary: #030615;
-    --color-secondary: '';
-    --color-tertiary: '';
-    --color-accent: '';
-    --color-compliment: '';
-    --color-gradient: '';
-    --color-muted: ;
+    --color-secondary: inherit;
+    --color-tertiary: inherit;
+    --color-accent: inherit;
+    --color-compliment: inherit;
+    --color-gradient: none;
+    --color-muted: inherit;
     --color-link: #2563eb;
     --color-link-transparent: rgba(37, 99, 235, 0.1);
 
-    --color-success: '';
-    --color-warning: '';
-    --color-error: '';
-    --color-info: '';
+    --color-success: inherit;
+    --color-warning: inherit;
+    --color-error: inherit;
+    --color-info: inherit;
     --color-highlight: #fef9c3;
 
     --gradient-start: #9580ff;
@@ -47,11 +47,11 @@
     --border-primary: #f1f5f9;
     --border-secondary: #bed1e7;
     --border-highlight: #64748b;
-    --border-tertiary: '';
+    --border-tertiary: transparent;
 
-    --shadow-dark: '';
-    --shadow-light: '';
-    --shadow-text: '';
+    --shadow-dark: none;
+    --shadow-light: none;
+    --shadow-text: none;
 
     --padding-small: 1rem;
     --padding-large: 2rem;
@@ -60,7 +60,7 @@
     --border-radius-large: 0.75rem;
     --highlight-border-radius: 0.5rem;
 
-    --text-selection: '';
+    --text-selection: inherit;
 }
 
 @media (prefers-color-scheme: dark) {
